--- a/src/EntryLibraryApp/EntryLibraryApp.css
+++ b/src/EntryLibraryApp/EntryLibraryApp.css
@@ -42,6 +42,7 @@ body {
   height: 35px;
 }
 
+
 .EntryLibraryApp label {
   font-size: 1.25rem;
 }
@@ -54,6 +55,7 @@ body {
   font-size: 1.25rem;
   cursor: pointer;
 }
+
 .EntryLibraryApp button:hover {
   background: #1f4b19;
 }
@@ -66,6 +68,11 @@ body {
   border: 2px solid #444;
 }
 
-.EntryLibraryApp .entryLibrary-errors li {
+
+.entryLibrary-hasErrors {
+ border: 1px solid red;
+}
+
+.entryLibrary-errors li {
   margin-top: 0.5rem;
 }
